Premium frontend (#97)
* added admin and premium checks

* added premium_user role

* Based Premium Post Layout

* more styling fixes

* fixed kubb files and atlas

* fixed pdf viewing

* fixed pages

* wip create premium post

* fixed creating premium posts

* fixed post

* WOOOOO

* Fixed

* final insider content fixes
