# backend/internal/handlers/premium_post/premium_post_service.go
@@ -6,6 +6,8 @@ import (
 	"inside-athletics/internal/models"
 	"inside-athletics/internal/s3"
 	"inside-athletics/internal/utils"
+	"regexp"
+	"strings"
 
 	"github.com/danielgtaylor/huma/v2"
 	"github.com/google/uuid"
@@ -28,13 +30,17 @@ func NewPremiumPostService(db *gorm.DB, s3Svc *s3.Service) *PremiumPostService {
 	}
 }
 
-// resolveMediaKey replaces post.Media.S3Key with a presigned download URL in-place.
+// resolveMediaKey replaces post.Media.S3Key and post.Author.ProfilePicture with presigned download URLs in-place.
 func (s *PremiumPostService) resolveMediaKey(ctx context.Context, post *models.PremiumPost) {
-	if post.Media == nil {
-		return
+	if post.Media != nil {
+		if url := s3.ResolveKey(ctx, s.s3, post.Media.S3Key); url != "" {
+			post.Media.S3Key = url
+		}
 	}
-	if url := s3.ResolveKey(ctx, s.s3, post.Media.S3Key); url != "" {
-		post.Media.S3Key = url
+	if post.Author.ProfilePicture != "" {
+		if url := s3.ResolveKey(ctx, s.s3, post.Author.ProfilePicture); url != "" {
+			post.Author.ProfilePicture = url
+		}
 	}
 }
 
@@ -172,6 +178,80 @@ func (s *PremiumPostService) GetPremiumPostsByTagID(ctx context.Context, input *
 
 	return &utils.ResponseBody[GetPremiumPostsByTagIDResponse]{
 		Body: &GetPremiumPostsByTagIDResponse{
+			Posts: postResponses,
+			Total: int(total),
+		},
+	}, nil
+}
+
+// FuzzySearchForPremiumPost searches premium posts by title using fuzzy matching
+func (s *PremiumPostService) FuzzySearchForPremiumPost(ctx context.Context, input *GetSearchPremiumPostParam) (*utils.ResponseBody[GetSearchPremiumPostResponse], error) {
+	posts, total, err := s.premiumPostDB.FuzzySearchForPremiumPost(input.SearchStr, input.Limit, input.Offset)
+	if err != nil {
+		return nil, err
+	}
+
+	postResponses := make([]PremiumPostResponse, 0, len(posts))
+	for i := range posts {
+		s.resolveMediaKey(ctx, &posts[i])
+		postResponses = append(postResponses, *ToPremiumPostResponse(&posts[i]))
+	}
+
+	return &utils.ResponseBody[GetSearchPremiumPostResponse]{
+		Body: &GetSearchPremiumPostResponse{
+			Posts: postResponses,
+			Count: total,
+		},
+	}, nil
+}
+
+// FilterPremiumPosts filters premium posts by college, sport, and tag IDs
+func (s *PremiumPostService) FilterPremiumPosts(ctx context.Context, input *GetFilterPremiumPostsParams) (*utils.ResponseBody[GetFilterPremiumPostsResponse], error) {
+	uuidPattern := `[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}`
+	fullPattern := fmt.Sprintf(`^%s(?:,%s)*$`, uuidPattern, uuidPattern)
+	re := regexp.MustCompile(fullPattern)
+
+	if input.CollegeIds != "" && !re.MatchString(input.CollegeIds) {
+		return nil, huma.Error400BadRequest("Expected comma separated list of uuids with no spaces for college input uuid,uuid")
+	}
+	if input.SportIds != "" && !re.MatchString(input.SportIds) {
+		return nil, huma.Error400BadRequest("Expected comma separated list of uuids with no spaces for sport input uuid,uuid")
+	}
+	if input.TagIds != "" && !re.MatchString(input.TagIds) {
+		return nil, huma.Error400BadRequest("Expected comma separated list of uuids with no spaces for tag input uuid,uuid")
+	}
+
+	mapUUID := func(id string) uuid.UUID {
+		parsedId, _ := uuid.Parse(id)
+		return parsedId
+	}
+
+	collegeIds := []uuid.UUID{}
+	sportIds := []uuid.UUID{}
+	tagIds := []uuid.UUID{}
+	if input.CollegeIds != "" {
+		collegeIds = utils.MapList(strings.Split(input.CollegeIds, ","), mapUUID)
+	}
+	if input.SportIds != "" {
+		sportIds = utils.MapList(strings.Split(input.SportIds, ","), mapUUID)
+	}
+	if input.TagIds != "" {
+		tagIds = utils.MapList(strings.Split(input.TagIds, ","), mapUUID)
+	}
+
+	posts, total, err := s.premiumPostDB.FilterPremiumPosts(collegeIds, sportIds, tagIds, input.Limit, input.Offset)
+	if err != nil {
+		return nil, err
+	}
+
+	postResponses := make([]PremiumPostResponse, 0, len(posts))
+	for i := range posts {
+		s.resolveMediaKey(ctx, &posts[i])
+		postResponses = append(postResponses, *ToPremiumPostResponse(&posts[i]))
+	}
+
+	return &utils.ResponseBody[GetFilterPremiumPostsResponse]{
+		Body: &GetFilterPremiumPostsResponse{
 			Posts: postResponses,
 			Total: int(total),
 		},
