# backend/internal/handlers/utility/utility_types.go
@@ -1,0 +1,6 @@
+package utility
+
+type AccessCheckResponse struct {
+	HasPremium bool `json:"has_premium" doc:"Whether the user has premium content access"`
+	IsAdmin    bool `json:"is_admin" doc:"Whether the user has admin access"`
+}
