# openapi.yaml
@@ -1,5 +1,25 @@
 components:
   schemas:
+    AccessCheckResponse:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/AccessCheckResponse.json
+          format: uri
+          readOnly: true
+          type: string
+        has_premium:
+          description: Whether the user has premium content access
+          type: boolean
+        is_admin:
+          description: Whether the user has admin access
+          type: boolean
+      required:
+        - has_premium
+        - is_admin
+      type: object
     AssignRoleRequest:
       additionalProperties: false
       properties:
@@ -823,8 +843,6 @@ components:
             - Looking for thoughts on NEU Fencing!
           type: string
       required:
-        - sport_id
-        - college_id
         - tag
         - title
         - content
@@ -1306,11 +1324,6 @@ components:
           format: uri
           readOnly: true
           type: string
-        account_type:
-          description: If the user has access to premium features
-          examples:
-            - true
-          type: boolean
         bio:
           description: The bio of a user
           examples:
@@ -1368,7 +1381,6 @@ components:
         - last_name
         - email
         - username
-        - account_type
         - verified_athlete_status
       type: object
     CreateUserResponse:
@@ -2053,6 +2065,33 @@ components:
         - download_url
         - expires_in
       type: object
+    GetFilterPremiumPostsResponse:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/GetFilterPremiumPostsResponse.json
+          format: uri
+          readOnly: true
+          type: string
+        posts:
+          description: List of filtered premium posts
+          items:
+            $ref: "#/components/schemas/PremiumPostResponse"
+          type:
+            - array
+            - "null"
+        total:
+          description: Total number of matching premium posts
+          examples:
+            - 100
+          format: int64
+          type: integer
+      required:
+        - posts
+        - total
+      type: object
     GetFollowingUsersByCollegeResponse:
       additionalProperties: false
       properties:
@@ -2397,6 +2436,33 @@ components:
       required:
         - posts
         - total
+      type: object
+    GetSearchPremiumPostResponse:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/GetSearchPremiumPostResponse.json
+          format: uri
+          readOnly: true
+          type: string
+        count:
+          description: Count of search results found for given search
+          examples:
+            - 5
+          format: int64
+          type: integer
+        posts:
+          description: List of premium post responses found for given search
+          items:
+            $ref: "#/components/schemas/PremiumPostResponse"
+          type:
+            - array
+            - "null"
+      required:
+        - posts
+        - count
       type: object
     GetSearchResponse:
       additionalProperties: false
@@ -2788,11 +2854,6 @@ components:
           format: uri
           readOnly: true
           type: string
-        account_type:
-          description: If the user has access to premium features
-          examples:
-            - true
-          type: boolean
         bio:
           description: The bio of a user
           examples:
@@ -2862,7 +2923,6 @@ components:
         - last_name
         - email
         - username
-        - account_type
         - verified_athlete_status
       type: object
     HealthResponse:
@@ -4124,11 +4184,6 @@ components:
           format: uri
           readOnly: true
           type: string
-        account_type:
-          description: If the user has access to premium features
-          examples:
-            - true
-          type: boolean
         bio:
           description: The bio of a user
           examples:
@@ -4185,11 +4240,6 @@ components:
     User:
       additionalProperties: false
       properties:
-        account_type:
-          description: If the user has access to premium features
-          examples:
-            - true
-          type: boolean
         bio:
           description: The name of a user
           examples:
@@ -4272,7 +4322,6 @@ components:
         - username
         - bio
         - profile_picture
-        - account_type
         - sport
         - expected_grad_year
         - verified_athelete_status
@@ -6150,6 +6199,130 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Get API v1 posts premium by tag by tag ID
+  /api/v1/posts/premium/filter:
+    get:
+      operationId: get-api-v1-posts-premium-filter
+      parameters:
+        - description: Comma seperated list of college_ids to filter by
+          example: 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+          explode: false
+          in: query
+          name: college_ids
+          schema:
+            description: Comma seperated list of college_ids to filter by
+            examples:
+              - 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+            type: string
+        - description: Comma seperated list of sport_ids to filter by
+          example: 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+          explode: false
+          in: query
+          name: sport_ids
+          schema:
+            description: Comma seperated list of sport_ids to filter by
+            examples:
+              - 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+            type: string
+        - description: Comma seperated list of tag_ids to filter by
+          example: 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+          explode: false
+          in: query
+          name: tag_ids
+          schema:
+            description: Comma seperated list of tag_ids to filter by
+            examples:
+              - 98d830a4-3ddd-441f-a8b8-12d99b597894,98d830a4-3ddd-441f-a8b8-12d99b597894
+            type: string
+        - description: Number of posts to return when filtering
+          example: 20
+          explode: false
+          in: query
+          name: limit
+          schema:
+            default: 20
+            description: Number of posts to return when filtering
+            examples:
+              - 20
+            format: int64
+            type: integer
+        - description: Number of entries in the database to offset by
+          example: 8
+          explode: false
+          in: query
+          name: offset
+          schema:
+            default: 0
+            description: Number of entries in the database to offset by
+            examples:
+              - 8
+            format: int64
+            type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetFilterPremiumPostsResponse"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get API v1 posts premium filter
+  /api/v1/posts/premium/search:
+    get:
+      operationId: get-api-v1-posts-premium-search
+      parameters:
+        - description: String to fuzzy search premium posts on
+          example: Northeastern University
+          explode: false
+          in: query
+          name: search_str
+          schema:
+            description: String to fuzzy search premium posts on
+            examples:
+              - Northeastern University
+            type: string
+        - description: Cap on the number of posts to return
+          example: 10
+          explode: false
+          in: query
+          name: limit
+          schema:
+            default: 20
+            description: Cap on the number of posts to return
+            examples:
+              - 10
+            format: int64
+            type: integer
+        - description: Number of entries to skip for pagination
+          example: 8
+          explode: false
+          in: query
+          name: offset
+          schema:
+            default: 0
+            description: Number of entries to skip for pagination
+            examples:
+              - 8
+            format: int64
+            type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetSearchPremiumPostResponse"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get API v1 posts premium search
   /api/v1/posts/premium/{id}:
     delete:
       operationId: delete-api-v1-posts-premium-by-id
@@ -7878,5 +8051,22 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Post API v1 user by ID roles
+  /api/v1/utility/access-check:
+    get:
+      operationId: get-api-v1-utility-access-check
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AccessCheckResponse"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get API v1 utility access check
 security:
   - Authorization: []
